--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "login-register",
+  "name": "pokemaster-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,9 +11,9 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
